<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Time Manager</string>

    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="or">Or</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>

    <string name="invalid_credentials">Invalid credentials</string>
    <string name="too_weak_password">Too weak password</string>
    <string name="login_failed">Authentication Failed</string>
    <string name="user_already_exists">User with this email already exists</string>
    <string name="user_does_not_exist">User with this email does not exist</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="unknown_failure_password_reset">Password reset failed</string>
    <string name="password_reset_email_sent">Password reset instructions were sent to your email</string>

    <string name="no_deadline">No deadline</string>
    <string name="add_new_task">Add new task</string>
    <string name="view_scope_for_all_users">For all users</string>
    <string name="view_scope_for_current_user">Your tasks</string>
    <string name="sign_out">Sign out</string>
    <string name="is_task_completed">Is task completed?</string>
    <string name="empty_list">It\'s empty here.\nTry adding new tasks.</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="choose_deadline">Click to choose deadline</string>
    <string name="is_subtask_completed">Is subtask completed?</string>
    <string name="delete_subtask">Delete subtask</string>
    <string name="subtask_description">Subtask description</string>
    <string name="add_subtasks">Add subtasks</string>
    <string name="deadline_passed">This time\'s already passed</string>
</resources>
